--- a/index.html
+++ b/index.html
@@ -81,13 +81,13 @@
             <p class="text-xl md:text-2xl text-cyan-400 mt-4">Mobile Team Lead & Senior Android Developer</p>
             <p class="text-gray-400 mt-2 max-w-2xl mx-auto">Dhaka, Bangladesh</p>
             <div class="mt-8 flex justify-center space-x-6">
-                <a href="https://www.linkedin.com/in/masayem/" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
+                <a href="https://www.linkedin.com/in/sayem405/" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
                     <i data-lucide="linkedin" class="w-8 h-8"></i>
                 </a>
-                <a href="https://stackoverflow.com/users/3362269/m-a-sayem" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
+                <a href="https://stackoverflow.com/users/1263362/sayem?tab=profile" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
                     <svg class="w-8 h-8" fill="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path d="M18.922 20.71c.522 0 .934.412.934.934v1.422H3.21V22.07c0-.522.412-.934.934-.934h14.778zM7.823 19.844l9.336 2.023.412-1.85-9.336-2.023-.412 1.85zm1.237-4.52l8.47 4.118.823-1.645-8.47-4.118-.823 1.645zm2.47-4.438l6.88 6.055 1.237-1.422-6.88-6.055-1.237 1.422zm4.117-3.934l4.52 7.74 1.645-.822-4.52-7.74-1.645.822zM19.334 3.21H18.51l-1.85 11.19 1.85.412L20.364 3.21h-1.03zM7.21 20.71h10.3v-1.85h-10.3v1.85z"/></svg>
                 </a>
-                <a href="https://github.com/masayem" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
+                <a href="https://github.com/sayem405" target="_blank" class="text-gray-400 hover:text-cyan-400 transition-colors">
                     <i data-lucide="github" class="w-8 h-8"></i>
                 </a>
             </div>
@@ -109,58 +109,57 @@
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-8">
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="code" class="mr-2 text-cyan-400"></i>Programming Languages</h3>
-                    <div class="flex flex-wrap">
-                        <span class="tag">Kotlin</span>
-                        <span class="tag">Java</span>
-                        <span class="tag">C#</span>
-                        <span class="tag">ASP.NET</span>
-                    </div>
+                    <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Kotlin</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Java</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>C#</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>ASP.NET</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="smartphone" class="mr-2 text-cyan-400"></i>Mobile Development</h3>
-                    <div class="flex flex-wrap">
-                        <span class="tag">Android Development</span>
-                        <span class="tag">Jetpack Compose</span>
-                        <span class="tag">MVVM / MVP</span>
-                        <span class="tag">Clean Architecture</span>
-                        <span class="tag">Modularized Apps</span>
-                        <span class="tag">Dagger & Hilt</span>
-                    </div>
+                    <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Android Development</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Jetpack Compose</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>MVVM / MVP</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Clean Architecture</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Dagger & Hilt</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="database" class="mr-2 text-cyan-400"></i>Backend & Databases</h3>
-                    <div class="flex flex-wrap">
-                        <span class="tag">RESTful API</span>
-                        <span class="tag">SQLite</span>
-                        <span class="tag">MySQL</span>
-                        <span class="tag">Firebase</span>
-                        <span class="tag">Couchbase</span>
-                    </div>
+                    <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>RESTful API</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>SQLite</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>MySQL</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Firebase</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Couchbase</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="cloud-cog" class="mr-2 text-cyan-400"></i>Web Services</h3>
-                    <div class="flex flex-wrap">
-                        <span class="tag">RESTful</span>
-                        <span class="tag">SOAP</span>
-                    </div>
+                    <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>RESTful</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>SOAP</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="git-branch" class="mr-2 text-cyan-400"></i>Version Control</h3>
-                     <div class="flex flex-wrap">
-                        <span class="tag">Git</span>
-                        <span class="tag">SVN</span>
-                    </div>
+                     <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Git</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>SVN</li>
+                    </ul>
                 </div>
                 <div class="card">
                     <h3 class="text-xl font-semibold text-white mb-4 flex items-center"><i data-lucide="wrench" class="mr-2 text-cyan-400"></i>Tools & Frameworks</h3>
-                     <div class="flex flex-wrap">
-                        <span class="tag">Retrofit</span>
-                        <span class="tag">Glide</span>
-                        <span class="tag">Room</span>
-                        <span class="tag">Coroutine</span>
-                        <span class="tag">Jetpack Libraries</span>
-                        <span class="tag">Fastlane</span>
-                    </div>
+                     <ul class="space-y-2 text-gray-300">
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Retrofit & Volley</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Glide</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Room</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Coroutine</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Jetpack Libraries</li>
+                        <li class="flex items-center"><i data-lucide="chevron-right" class="w-4 h-4 mr-2 text-cyan-400"></i>Fastlane</li>
+                    </ul>
                 </div>
             </div>
         </section>
@@ -302,7 +301,6 @@
     <footer class="bg-gray-900 border-t border-gray-800">
         <div class="container mx-auto px-6 py-8 text-center text-gray-400">
             <p>&copy; 2025 M. A. Sayem. All Rights Reserved.</p>
-            <p class="text-sm mt-2">Built with <a href="https://tailwindcss.com" class="hover:text-cyan-400">Tailwind CSS</a> & hosted on GitHub Pages.</p>
         </div>
     </footer>
     
