--- a/index.html
+++ b/index.html
@@ -34,9 +34,6 @@
         .card {
             @apply bg-gray-800 p-6 rounded-lg shadow-lg hover:shadow-cyan-500/20 transition-shadow duration-300;
         }
-        .tag {
-            @apply inline-block bg-gray-700 text-cyan-300 text-xs font-semibold mr-2 mb-2 px-2.5 py-1 rounded-full;
-        }
         .timeline-item::before {
             content: '';
             position: absolute;
@@ -363,6 +360,15 @@
                     </li>
                 </ul>
             </div>
+        </section>
+
+        <!-- Download CV Section -->
+        <section id="download-cv" class="py-16 text-center">
+            <a href="https://drive.google.com/file/d/1GhxREbH41j0iXDQqEwv0rfvAtH7b2c6a/view?usp=sharing" target="_blank"
+               class="inline-flex items-center px-8 py-4 border border-transparent text-lg font-medium rounded-md shadow-lg text-white bg-cyan-600 hover:bg-cyan-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-cyan-500 transition-all duration-300 transform hover:scale-105">
+                <i data-lucide="download" class="w-6 h-6 mr-3"></i>
+                Download CV
+            </a>
         </section>
 
     </main>
